[package]
name = "ahc-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ahc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
url = "2.5.4"
zip = "2.2.2"

[dev-dependencies]
assert_cmd = "2.0.16"
mockito = "1.6.1"
tempfile = "3.15.0"
